[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindvault"
version = "0.1.0"
description = "MindVault - 安全、高效的数据存储与传输工具包"
readme = "README.md"
authors = [
    {name = "MindVault Team", email = "team@mindvault.ai"}
]
license = {text = "MIT"}
keywords = ["storage", "transfer", "synchronization", "data-management", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Communications :: File Sharing",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "watchdog>=4.0.0",
    "psutil>=5.9.0",
    "aiofiles>=23.0.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
gui = [
    "PyQt5>=5.15.0",
    "qasync>=0.25.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]
full = [
    "mindvault[gui]",
    "mindvault[web]",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "sqlalchemy>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/mindvault-team/mindvault"
Documentation = "https://mindvault.readthedocs.io"
Repository = "https://github.com/mindvault-team/mindvault"
Bug-Tracker = "https://github.com/mindvault-team/mindvault/issues"
Changelog = "https://github.com/mindvault-team/mindvault/releases"

[project.scripts]
mindvault = "mindvault.cli.core.main:main"
mv-transfer = "mindvault.cli.commands.transfer:main"
mv-storage = "mindvault.cli.commands.storage:main"
mv-sync = "mindvault.cli.commands.sync:main"

[project.entry-points."mindvault.plugins"]
transfer_protocols = "mindvault.plugins.protocols.registry:discover"
storage_backends = "mindvault.plugins.storage.registry:discover"
sync_strategies = "mindvault.plugins.sync.registry:discover"

[tool.setuptools]
packages = ["mindvault"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["mindvault*"]
exclude = [
    "tests*",
    "examples*",
    "docs*",
    "scripts*",
    ".github*",
    ".*",
]

[tool.setuptools.package-data]
"mindvault" = [
    "py.typed",
    "data/config/*.yaml",
    "data/config/*.json",
    "data/templates/*.html",
    "data/schemas/*.json",
    "web/static/css/*.css",
    "web/static/js/*.js",
    "gui/resources/icons/*.png",
    "gui/resources/icons/*.ico",
]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
files = ["src/mindvault", "tests"]

[[tool.mypy.overrides]]
module = [
    "PyQt5.*",
    "fastapi.*",
    "sqlalchemy.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-v",
    "--cov=mindvault",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests",
    "security: marks tests as security tests",
    "gui: marks tests that require GUI",
    "web: marks tests that require web server",
]

[tool.coverage.run]
source = ["src/mindvault"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/async/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
]

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "*.pyi",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]